# SwagariaMultiplayer

Client/: CMakeLists.txt
Client/include/: AudioManager.h  Button.h  Camera.h  Chunk.h  Game.h  Inventory.h  ItemRegistry.h  ItemSlot.h  Network.h  ParticleManager.h  Player.h  TextureManager.h  Tile.h  TileDefinition.h  World.h
Client/libs/SDL2_image/lib/cmake/SDL2_image/: sdl2_image-config.cmake
Client/libs/SDL2_mixer/lib/cmake/SDL2_mixer/: sdl2_mixer-config.cmake
Client/src/: AudioManager.cpp  Camera.cpp  Game.cpp  Inventory.cpp  Network.cpp  TextureManager.cpp  main.cpp
Server/: pom.xml
Server/src/main/java/com/swagaria/: Main.java
Server/src/main/java/com/swagaria/data/: ItemRegistry.java  TerrainConfig.java  Tile.java  TileComponent.java  TileDefinition.java  TileLayer.java  TileType.java
Server/src/main/java/com/swagaria/data/components/: CollisionComponent.java  DurabilityComponent.java  LightSourceComponent.java  RequiredToolComponent.java
Server/src/main/java/com/swagaria/data/inventory/: Inventory.java  ItemSlot.java
Server/src/main/java/com/swagaria/data/items/: Item.java  TileItem.java  ToolItem.java  ToolType.java
Server/src/main/java/com/swagaria/game/: Chunk.java  Physics.java  Player.java  Tile.java  World.java
Server/src/main/java/com/swagaria/network/: ClientHandler.java  Packet.java  Server.java
Server/src/main/java/com/swagaria/util/: Logger.java  OpenSimplexNoise.java  ServerGUI.java
Server/src/main/java/com/swagaria/utils/: Logger.java  SeedGen.java
SwagariaServer - Build/: RunServer.bat
(+5 files in other folders)
